thực hiện tối ưu tìm kiếm BE FE sizes